# anki-ai

./: .gitignore  LICENSE.txt  README.md  makefile  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
docs/: how_to_export_notes_from_anki.md  todo.md
nbs/: find-duplicate-notes.ipynb  find_duplicate_notes.ipynb  format-notes.ipynb  format_notes.ipynb  format_notes_workflow.ipynb  llm_as_a_judge.ipynb  review_app.ipynb  structured_output.ipynb  vllm_server.ipynb
src/anki_ai/adapters/: chat_completion.py
src/anki_ai/domain/: deck.py  model.py  note.py
src/anki_ai/entrypoints/: api_server.py  format_notes.py  review_note_changes.py  review_notes.py  review_notes_changes.py
src/anki_ai/service_layer/: services.py  utils.py
tests/: conftest.py
tests/data/: test_data.txt
tests/integration/: test_chat_completion.py
tests/unit/: test_deck.py  test_model.py  test_note.py  test_review_app.py  test_services.py  test_utils.py
