[project]
name = "anki-ai"
version = "0.1.0"
description = "AI-powered Utilites for Anki"
authors = [{name= "Gianluca Rossi" , email= "gr.gianlucarossi@gmail.com" }]
requires-python = ">=3.10"
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "accelerate>=0.34.2",
    "anki-ai",
    "fire>=0.6.0",
    "loguru>=0.7.2",
    "openai>=1.45.0",
    "pandas>=2.2.3",
    "prompt-toolkit>=3.0.47",
    "pydantic>=2.9.1",
    "qdrant-client>=1.11.1",
    "sentence-transformers>=3.1.0",
    "termcolor>=2.5.0",
    "torch>=2.4.0",
    "transformers>=4.44.2",
    "vllm>=0.6.1",
]

[project.optional-dependencies]
dev = [
    "huggingface-hub[cli]>=0.24.7",
    "ipdb>=0.13.13",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.2.5",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.5",
]
nvim = [
    "pynvim>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "*.egg-info",
    ".*",
    "build",
    "dist",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
src = ["src"]
extend-include = ["*.ipynb"]
lint.extend-select = ["I"]
lint.extend-ignore = ["E741"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.uv.sources]
anki-ai = { workspace = true }
